# Neural-Network

./: CMakeLists.txt  README.md  labels.txt  neuralnetwork
data/: all_labels.txt  all_labels_new.txt  all_tfbs.txt  all_tfbs_new.txt  def_energy_chrI.txt  def_energy_chrII.txt  def_energy_chrII_new.txt  def_energy_chrI_new.txt  labels_chrII_new.txt  labels_chrIV.txt  labels_chrI_new.txt  tfbs_chrI.txt  tfbs_chrII.txt  tfbs_chrII_new.txt  tfbs_chrIV.txt  tfbs_chrIV_new.txt  tfbs_chrI_new.txt
src/: Network.hpp  README.org  loader.c  loader.h  main.cpp  mnist.h  pch.hpp
